--- a/math_coding/experiment.dev.yaml
+++ b/math_coding/experiment.dev.yaml
@@ -3,8 +3,8 @@
 connections:
 - name: aoai4
   connection_type: AzureOpenAIConnection
-  api_base: https://demoopenaiexamples.openai.azure.com/
-  api_version: sadadasddsaad
+  api_base: ${AZURE_AI_CHAT_ENDPOINT}
+  api_version: ${AZURE_OPENAI_API_VERSION}
   api_key: ${AOAI_API_KEY}
   api_type: azure
   deployment_name: ${GPT4O_DEPLOYMENT_NAME}
