--- a/math_coding/experiment.yaml
+++ b/math_coding/experiment.yaml
@@ -13,29 +13,29 @@ env_vars:
 connections:
   - name: aoai
     connection_type: AzureOpenAIConnection
-    api_base: https://demoopenaiexamples.openai.azure.com/
-    api_version: 2023-07-01-preview
+    api_base: ${AZURE_AI_CHAT_ENDPOINT}
+    api_version: ${AZURE_OPENAI_API_VERSION}
     api_key: ${AOAI_API_KEY}
     api_type: azure
     deployment_name: ${GPT4O_DEPLOYMENT_NAME}
   - name: gpt4o
     connection_type: AzureOpenAIConnection
-    api_base: https://demoopenaiexamples.openai.azure.com/
-    api_version: 2023-07-01-preview
+    api_base: ${AZURE_AI_CHAT_ENDPOINT}
+    api_version: ${AZURE_OPENAI_API_VERSION}
     api_key: ${GPT4O_API_KEY}
     api_type: azure
     deployment_name: ${GPT4O_DEPLOYMENT_NAME}
   - name: aoai1
     connection_type: AzureOpenAIConnection
-    api_base: https://demoopenaiexamples.openai.azure.com/
-    api_version: 2023-07-01-preview
+    api_base: ${AZURE_AI_CHAT_ENDPOINT}
+    api_version: ${AZURE_OPENAI_API_VERSION}
     api_key: ${AOAI_API_KEY}
     api_type: azure
     deployment_name: ${GPT4O_DEPLOYMENT_NAME}
   - name: gpt4o1
     connection_type: AzureOpenAIConnection
-    api_base: https://demoopenaiexamples.openai.azure.com/
-    api_version: 2023-07-01-preview
+    api_base: ${AZURE_AI_CHAT_ENDPOINT}
+    api_version:  ${AZURE_OPENAI_API_VERSION}
     api_key: ${GPT4O_API_KEY}
     api_type: azure
     deployment_name: ${GPT4O_DEPLOYMENT_NAME}
